# mota-c

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: contr.h  conversat.h  eqItem.h  floor.h  global.h  key.h  menu.h  monster.h  npc.h  obj.h  space.h  structBlock.h  tools.h  wall.h
resources/: resources.rc
src/: contr.cpp  conversat.cpp  eqItem.cpp  floor.cpp  global.cpp  key.cpp  main.cpp  menu.cpp  monster.cpp  npc.cpp  obj.cpp  space.cpp  structBlock.cpp  tools.cpp  wall.cpp
